# measurement-exercise

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
doc/: requirements.md
scripts/: create_release.sh
src/: CMakeLists.txt
src/measurement/: measurement.c  measurement.h  measurement_test.cpp
src/tools/: logout.h
